Added Account and Operation entities and corresponding Crud Views

--- a/src/Yomen/AccountsBundle/Resources/config/routing.yml
+++ b/src/Yomen/AccountsBundle/Resources/config/routing.yml
@@ -1,3 +1,11 @@
 yomen_accounts_homepage:
     pattern:  /hello/{name}
     defaults: { _controller: YomenAccountsBundle:Default:index }
+
+YomenAccountsBundle_account:
+    resource: "@YomenAccountsBundle/Resources/config/routing/account.yml"
+    prefix:   /account
+    
+YomenAccountsBundle_operation:
+        resource: "@YomenAccountsBundle/Resources/config/routing/operation.yml"
+        prefix:   /operation
