--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "symfony/framework-bundle": ">=2.1",
+        "bmatzner/jquery-bundle": "~1.10",
+        "bmatzner/foundation-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
