--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "symfony/framework-bundle": ">=2.1",
         "bmatzner/jquery-bundle": "~1.10",
-        "bmatzner/foundation-bundle": "dev-master"
+        "bmatzner/foundation-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "doctrine/doctrine-fixtures-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
