Adding MPTT to category via DoctrineExtensions -> Tree. Work in progress Maybe https://github.com/stof/StofDoctrineExtensionsBundle/blob/master/Resources/doc/index.rst would be an easier way to set this up.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+yomen_category:
+    resource: "@YomenCategoryBundle/Resources/config/routing.yml"
+    prefix:   /
+
 yomen_user:
     resource: "@YomenUserBundle/Controller/"
     type:     annotation
